environments/dev/02-platform-services/istio-gateways.yaml
# File: istio-gateways/all-gateways.yaml
# ArgoCD Gateway
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: argocd-gateway
  namespace: argocd
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - argocd.dev.cluster.local
  - port:
      number: 443
      name: https
      protocol: HTTPS
    hosts:
    - argocd.dev.cluster.local
    tls:
      mode: SIMPLE
      credentialName: argocd-tls

---
# Vault Gateway
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: vault-gateway
  namespace: vault
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - vault.dev.cluster.local
  - port:
      number: 443
      name: https
      protocol: HTTPS
    hosts:
    - vault.dev.cluster.local
    tls:
      mode: SIMPLE
      credentialName: vault-tls

---
# Keycloak Gateway
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: keycloak-gateway
  namespace: keycloak
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - keycloak.dev.cluster.local
  - port:
      number: 443
      name: https
      protocol: HTTPS
    hosts:
    - keycloak.dev.cluster.local
    tls:
      mode: SIMPLE
      credentialName: keycloak-tls

---
# Kibana Gateway
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: kibana-gateway
  namespace: elastic-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - kibana.dev.cluster.local
  - port:
      number: 443
      name: https
      protocol: HTTPS
    hosts:
    - kibana.dev.cluster.local
    tls:
      mode: SIMPLE
      credentialName: kibana-tls
